feat(task): enhance task dependency management with offset calculations