@@ -4,8 +4,6 @@ import app.competence.domain.Competence;
 import app.task.domain.Task;
 import app.task.presentation.dto.TaskDTO;
 
-import java.util.stream.Collectors;
-
 public final class TaskMapper
 {
     private TaskMapper() {}
@@ -24,8 +22,9 @@ public final class TaskMapper
                 task.getLaborDurationInDays(),
                 task.getScheduledDurationInDays(),
                 task.getStatus(),
-                task.getPredecessors().stream().map(Task::getId).collect(Collectors.toList()) // TODO added in feat/task-dependencies
-
+                task.getPredecessors().stream().map(Task::getId).sorted().toList(),
+                task.getDependencyStartOffsetInDays(),
+                task.getDependencyFinishOffsetInDays()
         );
     }
 }
